# fauxssh

./: .env.example  .gitignore  EDUCATIONAL.md  LICENSE  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt  test_repro.db
docs/: ALERTING.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  EDUCATIONAL.md  LOGGING.md
ssh_honeypot/: alert_manager.py  command_handler.py  config_manager.py  db_interface.py  fs_seeder.py  honey_db.py  llm_interface.py  logger.py  micro_editor.py  network.py  security_filter.py  server.py  sftp_handler.py  static_fs_seed.json  utils.py  webhook_notifier.py
tests/: test_alert_manager.py  test_analytics.py  test_anti_harvesting.py  test_auth_restrictions.py  test_authorized_keys.py  test_cd_integ.py  test_cd_restrictions.py  test_codebase_security.py  test_command_handler.py  test_complex_scenarios.py  test_dos_protection.py  test_echo_and_json.py  test_file_modification_returns.py  test_fs_inspector.py  test_hidden_command.py  test_honey_db_cow.py  test_import_resilience.py  test_keyword_alerts.py  test_local_commands.py  test_logging_metrics.py  test_long_commands.py  test_more_handlers.py  test_network_emulation.py  test_network_handlers.py  test_network_intelligence.py  test_network_pagers.py  test_payload_execution.py  test_permissions.py  test_realism_handlers.py  test_realistic_handlers.py  test_redirection.py  test_scp_protocol.py  test_security_filter.py  test_security_integration.py  test_server_tab_completion.py  test_sftp_handler.py  test_sftp_regressions.py  test_ssh_exec_integ.py  test_ssh_scp_client.py  (+9 more)
(+17 files in other folders)
